debug: fix flickering when clicking toolbar items
The commit fixes flickering when a user clicks toolbar items as part of
the `debug-view`. Previously, the styling would apply a transparent
border on click which would cause elements to flicker.

--- a/packages/debug/src/browser/style/index.css
+++ b/packages/debug/src/browser/style/index.css
@@ -145,10 +145,6 @@
     min-height: var(--theia-icon-size);
 }
 
-.debug-toolbar .debug-action:not(:focus) {
-    border: 1px solid transparent;
-}
-
 .debug-toolbar .debug-action.theia-mod-disabled {
     opacity: 0.5 !important;
     user-select: none;
